[package]
name = "server"
version = "0.1.0"
authors = ["Robert Lord <lord@users.noreply.github.com>"]
edition = "2018"

[dependencies]
simplemad = { git = "https://github.com/lord/simplemad", features = ["vendor"] }
tide = { git = "https://github.com/lord/tide", branch = "cors" }
async-std = { version = "1.6.0", features = ["attributes"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
hound = { version = "3.4.0" }
futures = { version = "0.3.5" }
lame = { version = "0.1.3" }
regex = "1"
lazy_static = "1.4.0"
