[package]
name = "server"
version = "0.1.0"
authors = ["Robert Lord <lord@users.noreply.github.com>"]
edition = "2018"

[dependencies]
simplemad = { git = "https://github.com/lord/simplemad", features = ["vendor"] }
tide = { git = "https://github.com/lord/tide" }
async-std = { version = "1.6.0", features = ["attributes"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
hound = { version = "3.4.0" }
